# nmcp-precomputed

./: .gitignore  Dockerfile  README.md  Taskfile.dist.yaml  Taskfile.yaml  docker-entry.sh  google-secret.json  pyproject.toml  requirements.txt  version.json
.github/workflows/: publish.yml
nmcp/: __init__.py  from_database.py  from_json.py  from_service.py  list_skeletons.py  precomputed_worker.py  remove_skeleton.py
nmcp/data/: __init__.py  precomputed_entry.py  remote_data_client.py
nmcp/precomputed/: __init__.py  nmcp_precomputed.py  nmcp_skeleton.py  segment_info.py  segment_property.py  segment_tag_property.py
tests/: create_from_json_test.py  create_incremental_test.py  create_skeleton_components_test.py  precomputed_worker_test.py  remote_data_client_test.py  segment_info_test.py  segment_property_test.py  segment_tag_property_test.py  test_utl.py
tests/fixtures/: mini.json  segment_info.pickle  tiny.json
